<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.ice</groupId>
	<artifactId>org.eclipse.ice.tasks.annotations</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<name>Eclipse ICE Tasks - Annotation Processors</name>
	<description>This package defines the interfaces and associated
		artifacts for annotation processing for tasks in Eclipse ICE</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.auto.service</groupId>
							<artifactId>auto-service</artifactId>
							<version>1.1.1</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.30</version>
						</path>
						<path>
							<groupId>org.eclipse.ice</groupId>
							<artifactId>org.eclipse.ice.dev.annotations</artifactId>
							<version>3.0.0-SNAPSHOT</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>
						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
						--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.ice</groupId>
			<artifactId>org.eclipse.ice.data</artifactId>
			<version>3.0.0-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.ice</groupId>
			<artifactId>org.eclipse.ice.dev.annotations</artifactId>
			<version>3.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.ice</groupId>
			<artifactId>org.eclipse.ice.tasks</artifactId>
			<version>3.0.0-SNAPSHOT</version>
		</dependency>
		<!-- Autoservice for annotation registration -->
		<dependency>
			<groupId>com.google.auto.service</groupId>
			<artifactId>auto-service</artifactId>
			<version>1.0-rc6</version>
			<scope>provided</scope>
		</dependency>
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.google.testing.compile</groupId>
			<artifactId>compile-testing</artifactId>
			<version>0.21.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>4.0.3</version>
			<scope>test</scope>
		</dependency>
		<!-- Apache Velocity Template Engine -->
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity-engine-core</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity.tools</groupId>
			<artifactId>velocity-tools-generic</artifactId>
			<version>3.0</version>
		</dependency>
	</dependencies>

</project>
